# cybersec_env

./: .gitignore  BLOG.md  NEXT_STEPS.md  README.md  USER_GUIDE.md  cybersec_grpo_results_iter_1.ipynb  cybersec_grpo_results_iter_3.ipynb  cybersec_grpo_results_iter_4.ipynb  cybersec_grpo_results_iter_5.ipynb  train.py
.scripts/: build_unified_notebook.py  inspect_results.py  nb_outline.py  push_bypass.py  smoke_unified.py
cybersec/: .huggingfaceignore  README.md  __init__.py  attacker.py  baselines.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  reward.py  scenarios.py  telemetry.py
cybersec/baselines/: __init__.py  policy.py  runner.py
cybersec/docs/: evaluation.md  reward.md  scenarios.md  spec.md
cybersec/outputs/evals/: trajectory_dataset.jsonl
cybersec/scripts/: evaluate_baselines.py  run_demo_trace.py
cybersec/server/: Dockerfile  __init__.py  app.py  attacker_policy.py  cybersec_environment.py  requirements.txt  reward_model.py  scenario_loader.py  telemetry.py  workflow.py  world_state.py
cybersec/tests/: test_baseline_runner.py  test_environment_contract.py  test_inference_contract.py  test_models_contract.py  test_scenarios_deterministic.py  test_server_runtime.py
cybersec/training/: README.md  __init__.py  export_dataset.py  rewards.py  run_grpo.py
notebooks/: 01_baseline_eval.ipynb  02_grpo_train.ipynb  03_post_train_eval.ipynb  cybersec_grpo.ipynb  cybersec_grpo_results.ipynb
scripts/: train_cybersec_grpo.py
tests/: conftest.py  test_action_validation.py  test_env_contract.py  test_reward_hack_canaries.py  test_scenarios.py  test_training_rewards.py
